--- a/docs/visual-basic/misc/bc32080.md
+++ b/docs/visual-basic/misc/bc32080.md
@@ -1,5 +1,5 @@
 ---
-title: 제네릭 메서드를 사용할 수 없습니다 &#39;처리&#39; 절
+title: 제네릭 메서드에서는 'Handles' 절을 사용할 수 없습니다.
 ms.date: 07/20/2015
 f1_keywords:
 - vbc32080
@@ -7,26 +7,26 @@ f1_keywords:
 helpviewer_keywords:
 - BC32080
 ms.assetid: 88c62a1c-aee3-46b2-ad78-76790022c04c
-ms.openlocfilehash: 4fe98b1b813684d462c1cc81ce452e613c30993a
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: c357c028eaa796fedd837beb47281117a1436bb3
+ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33629771"
+ms.lasthandoff: 12/22/2018
+ms.locfileid: "53763879"
 ---
-# <a name="generic-methods-cannot-use-39handles39-clause"></a><span data-ttu-id="0015e-102">제네릭 메서드를 사용할 수 없습니다 &#39;처리&#39; 절</span><span class="sxs-lookup"><span data-stu-id="0015e-102">Generic methods cannot use &#39;Handles&#39; clause</span></span>
-<span data-ttu-id="0015e-103">제네릭 `Sub` 프로시저의 선언에 [Handles](../../visual-basic/language-reference/statements/handles-clause.md) 절이 포함되어 있습니다.</span><span class="sxs-lookup"><span data-stu-id="0015e-103">A generic `Sub` procedure includes a [Handles](../../visual-basic/language-reference/statements/handles-clause.md) clause in its declaration.</span></span>  
+# <a name="generic-methods-cannot-use-handles-clause"></a><span data-ttu-id="37430-102">제네릭 메서드에서는 'Handles' 절을 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="37430-102">Generic methods cannot use 'Handles' clause</span></span>
+<span data-ttu-id="37430-103">제네릭 `Sub` 프로시저의 선언에 [Handles](../../visual-basic/language-reference/statements/handles-clause.md) 절이 포함되어 있습니다.</span><span class="sxs-lookup"><span data-stu-id="37430-103">A generic `Sub` procedure includes a [Handles](../../visual-basic/language-reference/statements/handles-clause.md) clause in its declaration.</span></span>  
   
- <span data-ttu-id="0015e-104">`Handles` 절은 `Sub` 프로시저가 처리하는 이벤트 목록을 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="0015e-104">A `Handles` clause specifies a list of events that the `Sub` procedure handles.</span></span> <span data-ttu-id="0015e-105">이벤트 처리기로 사용하려면 처리할 각 이벤트와 동일한 서명이 `Sub` 프로시저에 있어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="0015e-105">To be an event handler, the `Sub` procedure must have the same signature as each event it is to handle.</span></span> <span data-ttu-id="0015e-106">Visual Basic 컴파일 시간에 예측할 수 없는 서명을 사용 하 여 제네릭 프로시저를 두 번 이상 만들 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="0015e-106">A generic procedure can be created more than once, with signatures that Visual Basic cannot predict at compile time.</span></span> <span data-ttu-id="0015e-107">Visual Basic 보장할 수의 이벤트와 일치 하는 서명을 `Handles` 절.</span><span class="sxs-lookup"><span data-stu-id="0015e-107">Therefore, Visual Basic cannot guarantee a signature that matches those of the events in the `Handles` clause.</span></span>  
+ <span data-ttu-id="37430-104">`Handles` 절은 `Sub` 프로시저가 처리하는 이벤트 목록을 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="37430-104">A `Handles` clause specifies a list of events that the `Sub` procedure handles.</span></span> <span data-ttu-id="37430-105">이벤트 처리기로 사용하려면 처리할 각 이벤트와 동일한 서명이 `Sub` 프로시저에 있어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="37430-105">To be an event handler, the `Sub` procedure must have the same signature as each event it is to handle.</span></span> <span data-ttu-id="37430-106">Visual Basic 컴파일 시간에 예측할 수 없는 서명을 가진 제네릭 프로시저를 두 번 이상 만들 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="37430-106">A generic procedure can be created more than once, with signatures that Visual Basic cannot predict at compile time.</span></span> <span data-ttu-id="37430-107">Visual Basic의 이벤트를 일치 하는 시그니처를 보장할 수 없기는 `Handles` 절.</span><span class="sxs-lookup"><span data-stu-id="37430-107">Therefore, Visual Basic cannot guarantee a signature that matches those of the events in the `Handles` clause.</span></span>  
   
- <span data-ttu-id="0015e-108">**오류 ID:** BC32080</span><span class="sxs-lookup"><span data-stu-id="0015e-108">**Error ID:** BC32080</span></span>  
+ <span data-ttu-id="37430-108">**오류 ID:** BC32080</span><span class="sxs-lookup"><span data-stu-id="37430-108">**Error ID:** BC32080</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="0015e-109">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="0015e-109">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="37430-109">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="37430-109">To correct this error</span></span>  
   
--   <span data-ttu-id="0015e-110">`Sub` 프로시저가 제네릭이어야 하는 경우 해당 선언에서 `Handles` 절을 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="0015e-110">If the `Sub` procedure needs to be generic, remove the `Handles` clause from its declaration.</span></span> <span data-ttu-id="0015e-111">[AddHandler Statement](../../visual-basic/language-reference/statements/addhandler-statement.md) 을 사용하여 이 이벤트 처리기를 이벤트와 연결합니다.</span><span class="sxs-lookup"><span data-stu-id="0015e-111">Use the [AddHandler Statement](../../visual-basic/language-reference/statements/addhandler-statement.md) to associate this event handler with an event.</span></span>  
+-   <span data-ttu-id="37430-110">`Sub` 프로시저가 제네릭이어야 하는 경우 해당 선언에서 `Handles` 절을 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="37430-110">If the `Sub` procedure needs to be generic, remove the `Handles` clause from its declaration.</span></span> <span data-ttu-id="37430-111">[AddHandler Statement](../../visual-basic/language-reference/statements/addhandler-statement.md) 을 사용하여 이 이벤트 처리기를 이벤트와 연결합니다.</span><span class="sxs-lookup"><span data-stu-id="37430-111">Use the [AddHandler Statement](../../visual-basic/language-reference/statements/addhandler-statement.md) to associate this event handler with an event.</span></span>  
   
--   <span data-ttu-id="0015e-112">경우는 `Sub` 사용 해야 하는 프로시저는 `Handles` 절, 제거 하거나, 이벤트를 연결는 [의](../../visual-basic/language-reference/statements/of-clause.md) 해당 선언에서 절.</span><span class="sxs-lookup"><span data-stu-id="0015e-112">If the `Sub` procedure needs to use the `Handles` clause to associate events, remove the [Of](../../visual-basic/language-reference/statements/of-clause.md) clause from its declaration.</span></span> <span data-ttu-id="0015e-113">`Handles`를 사용할 때는 제네릭이 아닌 프로시저를 사용해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="0015e-113">You must use a nongeneric procedure with `Handles`.</span></span>  
+-   <span data-ttu-id="37430-112">`Sub` 프로시저에서 `Handles` 절을 사용하여 이벤트를 연결해야 하는 경우 해당 선언에서 [Of](../../visual-basic/language-reference/statements/of-clause.md) 절을 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="37430-112">If the `Sub` procedure needs to use the `Handles` clause to associate events, remove the [Of](../../visual-basic/language-reference/statements/of-clause.md) clause from its declaration.</span></span> <span data-ttu-id="37430-113">`Handles`를 사용할 때는 제네릭이 아닌 프로시저를 사용해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="37430-113">You must use a nongeneric procedure with `Handles`.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="0015e-114">참고 항목</span><span class="sxs-lookup"><span data-stu-id="0015e-114">See Also</span></span>  
- [<span data-ttu-id="0015e-115">Visual Basic의 제네릭 형식</span><span class="sxs-lookup"><span data-stu-id="0015e-115">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)  
- [<span data-ttu-id="0015e-116">이벤트(Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="0015e-116">Events (Visual Basic)</span></span>](~/docs/visual-basic/programming-guide/language-features/events/index.md)
+## <a name="see-also"></a><span data-ttu-id="37430-114">참고 항목</span><span class="sxs-lookup"><span data-stu-id="37430-114">See Also</span></span>  
+ [<span data-ttu-id="37430-115">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="37430-115">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)  
+ [<span data-ttu-id="37430-116">이벤트(Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="37430-116">Events (Visual Basic)</span></span>](~/docs/visual-basic/programming-guide/language-features/events/index.md)
