--- a/docs/visual-basic/misc/bc40050.md
+++ b/docs/visual-basic/misc/bc40050.md
@@ -1,5 +1,5 @@
 ---
-title: 대리자 형식의 &#39; &lt;delegatename&gt; &#39; 이벤트의 &#39; &lt;eventname&gt; &#39; CLS 규격이 아닙니다
+title: 대리자 형식 '&lt;delegatename&gt;'의 '이벤트&lt;eventname&gt;' CLS 규격이 아님
 ms.date: 07/20/2015
 f1_keywords:
 - bc40050
@@ -7,26 +7,26 @@ f1_keywords:
 helpviewer_keywords:
 - BC40050
 ms.assetid: 92f5be26-9a82-46d4-bf97-005f2c7ca424
-ms.openlocfilehash: 91555a290938b975038394f0345def8f08232654
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: 1fba057505a829c3a0a3f55d263b570679e4148b
+ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33633841"
+ms.lasthandoff: 12/22/2018
+ms.locfileid: "53765244"
 ---
-# <a name="delegate-type-39ltdelegatenamegt39-of-event-39lteventnamegt39-is-not-cls-compliant"></a><span data-ttu-id="62e2b-102">대리자 형식의 &#39; &lt;delegatename&gt; &#39; 이벤트의 &#39; &lt;eventname&gt; &#39; CLS 규격이 아닙니다</span><span class="sxs-lookup"><span data-stu-id="62e2b-102">Delegate type &#39;&lt;delegatename&gt;&#39; of event &#39;&lt;eventname&gt;&#39; is not CLS-compliant</span></span>
-<span data-ttu-id="62e2b-103">[Event 문](../../visual-basic/language-reference/statements/event-statement.md) 대리자를 사용 하 여 해당 서명을 지정 하지만 [Delegate 문은](../../visual-basic/language-reference/statements/delegate-statement.md) 로 표시 되어 `<CLSCompliant(False)>` 되거나 표시 되지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="62e2b-103">An [Event Statement](../../visual-basic/language-reference/statements/event-statement.md) uses a delegate to specify its signature, but the [Delegate Statement](../../visual-basic/language-reference/statements/delegate-statement.md) is marked as `<CLSCompliant(False)>` or is not marked.</span></span>  
+# <a name="delegate-type-ltdelegatenamegt-of-event-lteventnamegt-is-not-cls-compliant"></a><span data-ttu-id="fd786-102">대리자 형식 '&lt;delegatename&gt;'의 '이벤트&lt;eventname&gt;' CLS 규격이 아님</span><span class="sxs-lookup"><span data-stu-id="fd786-102">Delegate type '&lt;delegatename&gt;' of event '&lt;eventname&gt;' is not CLS-compliant</span></span>
+<span data-ttu-id="fd786-103">[Event Statement](../../visual-basic/language-reference/statements/event-statement.md) 이 대리자를 사용하여 해당 서명을 지정하지만 [Delegate Statement](../../visual-basic/language-reference/statements/delegate-statement.md) 이 `<CLSCompliant(False)>` 로 표시되거나 표시되지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="fd786-103">An [Event Statement](../../visual-basic/language-reference/statements/event-statement.md) uses a delegate to specify its signature, but the [Delegate Statement](../../visual-basic/language-reference/statements/delegate-statement.md) is marked as `<CLSCompliant(False)>` or is not marked.</span></span>  
   
- <span data-ttu-id="62e2b-104"><xref:System.CLSCompliantAttribute> 특성을 프로그래밍 요소에 적용하는 경우 특성의 `isCompliant` 매개 변수를 `True` 또는 `False` 로 설정하여 준수 여부를 나타냅니다.</span><span class="sxs-lookup"><span data-stu-id="62e2b-104">When you apply the <xref:System.CLSCompliantAttribute> attribute to a programming element, you set the attribute's `isCompliant` parameter to either `True` or `False` to indicate compliance or noncompliance.</span></span> <span data-ttu-id="62e2b-105">이 매개 변수에는 기본값이 없으며 값을 제공해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="62e2b-105">There is no default for this parameter, and you must supply a value.</span></span>  
+ <span data-ttu-id="fd786-104"><xref:System.CLSCompliantAttribute> 특성을 프로그래밍 요소에 적용하는 경우 특성의 `isCompliant` 매개 변수를 `True` 또는 `False` 로 설정하여 준수 여부를 나타냅니다.</span><span class="sxs-lookup"><span data-stu-id="fd786-104">When you apply the <xref:System.CLSCompliantAttribute> attribute to a programming element, you set the attribute's `isCompliant` parameter to either `True` or `False` to indicate compliance or noncompliance.</span></span> <span data-ttu-id="fd786-105">이 매개 변수에는 기본값이 없으며 값을 제공해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="fd786-105">There is no default for this parameter, and you must supply a value.</span></span>  
   
- <span data-ttu-id="62e2b-106">요소에 <xref:System.CLSCompliantAttribute> 를 적용하지 않으면 비규격인 것으로 간주됩니다.</span><span class="sxs-lookup"><span data-stu-id="62e2b-106">If you do not apply <xref:System.CLSCompliantAttribute> to an element, it is considered to be noncompliant.</span></span>  
+ <span data-ttu-id="fd786-106">요소에 <xref:System.CLSCompliantAttribute> 를 적용하지 않으면 비규격인 것으로 간주됩니다.</span><span class="sxs-lookup"><span data-stu-id="fd786-106">If you do not apply <xref:System.CLSCompliantAttribute> to an element, it is considered to be noncompliant.</span></span>  
   
- <span data-ttu-id="62e2b-107">이 메시지는 기본적으로 경고입니다.</span><span class="sxs-lookup"><span data-stu-id="62e2b-107">By default, this message is a warning.</span></span> <span data-ttu-id="62e2b-108">경고를 숨기거나 오류로 처리하는 방법에 대한 자세한 내용은 [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic)을 참조하세요.</span><span class="sxs-lookup"><span data-stu-id="62e2b-108">For information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
+ <span data-ttu-id="fd786-107">이 메시지는 기본적으로 경고입니다.</span><span class="sxs-lookup"><span data-stu-id="fd786-107">By default, this message is a warning.</span></span> <span data-ttu-id="fd786-108">경고를 숨기거나 오류로 처리하는 방법에 대한 자세한 내용은 [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic)을 참조하세요.</span><span class="sxs-lookup"><span data-stu-id="fd786-108">For information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
   
- <span data-ttu-id="62e2b-109">**오류 ID:** BC40050</span><span class="sxs-lookup"><span data-stu-id="62e2b-109">**Error ID:** BC40050</span></span>  
+ <span data-ttu-id="fd786-109">**오류 ID:** BC40050</span><span class="sxs-lookup"><span data-stu-id="fd786-109">**Error ID:** BC40050</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="62e2b-110">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="62e2b-110">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="fd786-110">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="fd786-110">To correct this error</span></span>  
   
--   <span data-ttu-id="62e2b-111">CLS 규격이 필요하고 대리자의 정의를 제어하는 경우 <xref:System.CLSCompliantAttribute> 를 해당 선언에 적용하여 `<CLSCompliant(True)>`로 표시합니다.</span><span class="sxs-lookup"><span data-stu-id="62e2b-111">If you require CLS compliance and have control over the definition of the delegate, apply <xref:System.CLSCompliantAttribute> to its declaration to mark it as `<CLSCompliant(True)>`.</span></span>  
+-   <span data-ttu-id="fd786-111">CLS 규격이 필요하고 대리자의 정의를 제어하는 경우 <xref:System.CLSCompliantAttribute> 를 해당 선언에 적용하여 `<CLSCompliant(True)>`로 표시합니다.</span><span class="sxs-lookup"><span data-stu-id="fd786-111">If you require CLS compliance and have control over the definition of the delegate, apply <xref:System.CLSCompliantAttribute> to its declaration to mark it as `<CLSCompliant(True)>`.</span></span>  
   
--   <span data-ttu-id="62e2b-112">대리자의 정의를 제어할 수 없거나 규격으로 표시할 수 없는 경우 <xref:System.CLSCompliantAttribute> 문에서 `Event` 를 제거하거나 `<CLSCompliant(False)>`로 표시합니다.</span><span class="sxs-lookup"><span data-stu-id="62e2b-112">If you do not have control over the definition of the delegate or cannot mark it as compliant, remove the <xref:System.CLSCompliantAttribute> from the `Event` statement or mark it as `<CLSCompliant(False)>`.</span></span>
+-   <span data-ttu-id="fd786-112">대리자의 정의를 제어할 수 없거나 규격으로 표시할 수 없는 경우 <xref:System.CLSCompliantAttribute> 문에서 `Event` 를 제거하거나 `<CLSCompliant(False)>`로 표시합니다.</span><span class="sxs-lookup"><span data-stu-id="fd786-112">If you do not have control over the definition of the delegate or cannot mark it as compliant, remove the <xref:System.CLSCompliantAttribute> from the `Event` statement or mark it as `<CLSCompliant(False)>`.</span></span>
