--- a/docs/visual-basic/misc/bc42022.md
+++ b/docs/visual-basic/misc/bc42022.md
@@ -1,5 +1,5 @@
 ---
-title: 지정 하지 않고 속성은 &#39;으로&#39; 절이 없습니다. Object 형식으로 간주
+title: 속성에 'As' 절이 없습니다. Object 형식으로 간주합니다.
 ms.date: 07/20/2015
 f1_keywords:
 - BC42022
@@ -7,27 +7,27 @@ f1_keywords:
 helpviewer_keywords:
 - BC42022
 ms.assetid: 3379692b-8278-4488-878a-0afb76e554b1
-ms.openlocfilehash: b3ce4e2f666b6d74805996a5acfb3df288aac231
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: 714ceef98d2578565e8431712c08b63f722da242
+ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33634958"
+ms.lasthandoff: 12/22/2018
+ms.locfileid: "53766632"
 ---
-# <a name="property-without-an-39as39-clause-type-of-object-assumed"></a><span data-ttu-id="12790-102">지정 하지 않고 속성은 &#39;으로&#39; 절이 없습니다. Object 형식으로 간주</span><span class="sxs-lookup"><span data-stu-id="12790-102">Property without an &#39;As&#39; clause; type of Object assumed</span></span>
-<span data-ttu-id="12790-103">속성 선언에서 `As` 절을 지정하지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="12790-103">A property declaration does not specify an `As` clause.</span></span>  
+# <a name="property-without-an-as-clause-type-of-object-assumed"></a><span data-ttu-id="685e2-102">속성에 'As' 절이 없습니다. Object 형식으로 간주합니다.</span><span class="sxs-lookup"><span data-stu-id="685e2-102">Property without an 'As' clause; type of Object assumed</span></span>
+<span data-ttu-id="685e2-103">속성 선언에서 `As` 절을 지정하지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="685e2-103">A property declaration does not specify an `As` clause.</span></span>  
   
- <span data-ttu-id="12790-104">`As` 절은 프로그래밍 요소와 연결될 데이터 형식을 식별합니다.</span><span class="sxs-lookup"><span data-stu-id="12790-104">An `As` clause identifies a data type to be associated with a programming element.</span></span> <span data-ttu-id="12790-105">에 [Property 문](../../visual-basic/language-reference/statements/property-statement.md), 값의 데이터 형식을 지정 하는 속성의 `Get` 프로시저가 호출 코드에 반환 합니다.</span><span class="sxs-lookup"><span data-stu-id="12790-105">In a [Property Statement](../../visual-basic/language-reference/statements/property-statement.md), it specifies the data type of the value that the property's `Get` procedure returns to the calling code.</span></span> <span data-ttu-id="12790-106">`As` 문에 `Property` 절을 포함하지 않으면 속성의 데이터 형식이 기본적으로 `Object`로 설정됩니다.</span><span class="sxs-lookup"><span data-stu-id="12790-106">If you do not include an `As` clause in the `Property` statement, the property's data type defaults to `Object`.</span></span>  
+ <span data-ttu-id="685e2-104">`As` 절은 프로그래밍 요소와 연결될 데이터 형식을 식별합니다.</span><span class="sxs-lookup"><span data-stu-id="685e2-104">An `As` clause identifies a data type to be associated with a programming element.</span></span> <span data-ttu-id="685e2-105">[Property Statement](../../visual-basic/language-reference/statements/property-statement.md)에서는 속성의 `Get` 프로시저가 호출 코드에 반환하는 값의 데이터 형식을 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="685e2-105">In a [Property Statement](../../visual-basic/language-reference/statements/property-statement.md), it specifies the data type of the value that the property's `Get` procedure returns to the calling code.</span></span> <span data-ttu-id="685e2-106">`As` 문에 `Property` 절을 포함하지 않으면 속성의 데이터 형식이 기본적으로 `Object`로 설정됩니다.</span><span class="sxs-lookup"><span data-stu-id="685e2-106">If you do not include an `As` clause in the `Property` statement, the property's data type defaults to `Object`.</span></span>  
   
- <span data-ttu-id="12790-107">이 메시지는 기본적으로 경고입니다.</span><span class="sxs-lookup"><span data-stu-id="12790-107">By default, this message is a warning.</span></span> <span data-ttu-id="12790-108">경고를 숨기 거 나 경고를 오류로 처리 하는 방법에 대 한 자세한 내용은 참조 [Visual Basic에서 경고 구성](/visualstudio/ide/configuring-warnings-in-visual-basic)합니다.</span><span class="sxs-lookup"><span data-stu-id="12790-108">For more information about hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
+ <span data-ttu-id="685e2-107">이 메시지는 기본적으로 경고입니다.</span><span class="sxs-lookup"><span data-stu-id="685e2-107">By default, this message is a warning.</span></span> <span data-ttu-id="685e2-108">경고를 숨기거나 오류로 처리하는 방법에 대한 자세한 내용은 [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic)을 참조하세요.</span><span class="sxs-lookup"><span data-stu-id="685e2-108">For more information about hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
   
- <span data-ttu-id="12790-109">**오류 ID:** BC42022</span><span class="sxs-lookup"><span data-stu-id="12790-109">**Error ID:** BC42022</span></span>  
+ <span data-ttu-id="685e2-109">**오류 ID:** BC42022</span><span class="sxs-lookup"><span data-stu-id="685e2-109">**Error ID:** BC42022</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="12790-110">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="12790-110">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="685e2-110">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="685e2-110">To correct this error</span></span>  
   
--   <span data-ttu-id="12790-111">`As` 문에 `Property` 절을 포함하여 속성의 데이터 형식을 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="12790-111">Include an `As` clause in the `Property` statement to specify the property's data type.</span></span>  
+-   <span data-ttu-id="685e2-111">`As` 문에 `Property` 절을 포함하여 속성의 데이터 형식을 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="685e2-111">Include an `As` clause in the `Property` statement to specify the property's data type.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="12790-112">참고 항목</span><span class="sxs-lookup"><span data-stu-id="12790-112">See Also</span></span>  
- [<span data-ttu-id="12790-113">속성 프로시저</span><span class="sxs-lookup"><span data-stu-id="12790-113">Property Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/property-procedures.md)  
- [<span data-ttu-id="12790-114">Property 문</span><span class="sxs-lookup"><span data-stu-id="12790-114">Property Statement</span></span>](../../visual-basic/language-reference/statements/property-statement.md)  
- [<span data-ttu-id="12790-115">Get 문</span><span class="sxs-lookup"><span data-stu-id="12790-115">Get Statement</span></span>](../../visual-basic/language-reference/statements/get-statement.md)
+## <a name="see-also"></a><span data-ttu-id="685e2-112">참고 항목</span><span class="sxs-lookup"><span data-stu-id="685e2-112">See Also</span></span>  
+ [<span data-ttu-id="685e2-113">속성 프로시저</span><span class="sxs-lookup"><span data-stu-id="685e2-113">Property Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/property-procedures.md)  
+ [<span data-ttu-id="685e2-114">Property 문</span><span class="sxs-lookup"><span data-stu-id="685e2-114">Property Statement</span></span>](../../visual-basic/language-reference/statements/property-statement.md)  
+ [<span data-ttu-id="685e2-115">Get 문</span><span class="sxs-lookup"><span data-stu-id="685e2-115">Get Statement</span></span>](../../visual-basic/language-reference/statements/get-statement.md)
