--- a/docs/visual-basic/misc/bc30370.md
+++ b/docs/visual-basic/misc/bc30370.md
@@ -1,5 +1,5 @@
 ---
-title: '&#39;(를)&#39; 필요 합니다.'
+title: "'}'가 필요합니다."
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30370
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30370
 ms.assetid: a4ce9be9-fc5d-46ec-a217-c3428bd0b97e
-ms.openlocfilehash: 09e4b75560479a842c121b3776215ed3a853c0f8
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: f478c5ee1f88fc853b554a617af59b3ee0c2dd50
+ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33611220"
+ms.lasthandoff: 12/22/2018
+ms.locfileid: "53766873"
 ---
-# <a name="3939-expected"></a>&#39;(를)&#39; 필요 합니다.
+# <a name="-expected"></a>'}'가 필요합니다.
 배열 이니셜라이저 또는 제약 조건 목록이 올바른 방식으로 끝나지 않았습니다.  
   
  배열을 초기화할 요소 값을 중괄호(`{}`)로 묶어야 합니다.  
@@ -36,7 +36,7 @@ Public Class dictionaryMaker(Of t As {IComparable, IDisposable, New})
 -   "}"를 사용하여 배열 이니셜라이저 또는 제약 조건 목록을 끝냅니다.  
   
 ## <a name="see-also"></a>참고 항목  
- [배열](../../visual-basic/programming-guide/language-features/arrays/index.md)  
+ [배열 (C++)](../../visual-basic/programming-guide/language-features/arrays/index.md)  
  [방법: Visual Basic에서 배열 변수 초기화](../../visual-basic/programming-guide/language-features/arrays/how-to-initialize-an-array-variable.md)  
  [형식 목록](../../visual-basic/language-reference/statements/type-list.md)  
- [Visual Basic의 제네릭 형식](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
+ [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
